--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -38,14 +38,15 @@ ul.classement li em {display:block;width:37px;float:#GET{left};margin-left:-40px
 
 
 table#visites {width: 80%; margin-right: auto; margin-left: auto; margin-bottom: 1em; border-collapse: collapse; border-spacing: 0; line-height: normal;border:1px solid #999;}
+table#visites a {color:#[(#GET{foncee}|couleur_foncer)];}
 
-table#visites tr.row_first { background-color:#GET{foncee};color:#fff;border: 1px solid #ddd; }
+table#visites tr.row_first { background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;border: 1px solid #ddd; }
 table#visites th, table#visites td { padding: 0.20em 0.40em; text-align: left; border: 1px solid #ddd; }
 table#visites th { vertical-align: bottom; font-weight: bold; }
 table#visites td { vertical-align: top; }
 table#visites td.valeur, table#visites td.moyenne, table#visites td.cumul { text-align:center; }
 
-table#visites tr.couleur_Sunday td {background-color:#GET{claire};}
+table#visites tr.couleur_Sunday td {background-color:#[(#GET{claire}|couleur_eclaircir)];}
 table#visites tr.couleur_today td {background-color:#eee;}
-table#visites tr.couleur_recap td {background-color:#GET{foncee};color:#fff;}
+table#visites tr.couleur_recap td {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
 
