--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -43,10 +43,14 @@ table#visites a {color:#[(#GET{foncee}|couleur_foncer)];}
 table#visites tr.row_first { background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;border: 1px solid #ddd; }
 table#visites th, table#visites td { padding: 0.20em 0.40em; text-align: left; border: 1px solid #ddd; }
 table#visites th { vertical-align: bottom; font-weight: bold; }
+table#visites tbody th { font-weight: normal; }
 table#visites td { vertical-align: top; }
 table#visites td.valeur, table#visites td.moyenne, table#visites td.cumul { text-align:center; }
 
-table#visites tr.couleur_Sunday td {background-color:#[(#GET{claire}|couleur_eclaircir)];}
-table#visites tr.couleur_today td {background-color:#eee;}
-table#visites tr.couleur_recap td {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
+table#visites tr.couleur_Sunday td,
+table#visites tr.couleur_Sunday th {background-color:#[(#GET{claire}|couleur_eclaircir)];}
+table#visites tr.couleur_today td,
+table#visites tr.couleur_today th {background-color:#eee;}
+table#visites tr.couleur_recap td,
+table#visites tr.couleur_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
 
