alleger le tableau html des stats en raccourcicant les noms de classes

--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -46,14 +46,14 @@ table.visites th, table.visites td { padding: 0.20em 0.40em; text-align: left; b
 table.visites th { vertical-align: bottom; font-weight: bold; }
 table.visites tbody th { font-weight: normal; }
 table.visites td { vertical-align: top; }
-table.visites td.valeur, table.visites td.moyenne, table.visites td.cumul { text-align:center; }
+table.visites td.val, table.visites td.mean, table.visites td.cumul { text-align:center; }
 
-table.visites tr.couleur_Sunday td,
-table.visites tr.couleur_Sunday th {background-color:#[(#GET{claire}|couleur_eclaircir)];}
-table.visites tr.couleur_today td,
-table.visites tr.couleur_today th {background-color:#eee;}
+table.visites tr.c_Sun td,
+table.visites tr.c_Sun th {background-color:#[(#GET{claire}|couleur_eclaircir)];}
+table.visites tr.c_today td,
+table.visites tr.c_today th {background-color:#eee;}
 /*
-table#visites tr.couleur_recap td,
-table#visites tr.couleur_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
+table#visites tr.c_recap td,
+table#visites tr.c_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
 */
 
