Mise en place de deux graphiques Flot générés à partir des tableaux HTML des statistiques quotidiennes et mensuelles. Le script jquery.tFlot.js se charge d'analyser le code html du tableau pour créer des données interprétables par jquery.flot.js.
Testé sous 
- Ubuntu : FF3, Opéra 9.6 
- WIN XP : IE 6 (un peu lent), FF3, Opera 9.6

--
A noter que IE est plus susceptible que les autres sur les json :
x = {a:{b:3,c:5}} fonctionne, mais
x = {a:{b:3,c:5,}} ou 
x = {a:{b:3,c:5},} retournent une erreur

--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -37,7 +37,8 @@ ul.classement li {padding:0 0 4px;margin:0;line-height:100%;}
 ul.classement li em {display:block;width:37px;float:#GET{left};margin-left:-40px;position:relative;display:inline;font-style:normal;text-align:#GET{right};}
 
 
-table.visites caption {font-size:1.3em;font-weight:bold;text-align:center;margin:0.5em auto;}
+table.visites caption,
+h3.caption {font-size:1.3em;font-weight:bold;text-align:center;margin:0.5em auto; clear:both;}
 table.visites {width: 80%; margin-right: auto; margin-left: auto; margin-bottom: 1em; border-collapse: collapse; border-spacing: 0; line-height: normal;border:1px solid #999;}
 table.visites a {color:#[(#GET{foncee}|couleur_foncer)];}
 
@@ -57,3 +58,10 @@ table#visites tr.c_recap td,
 table#visites tr.c_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];color:#fff;}
 */
 
+
+/* graphique flot */
+.graphique{clear:both; overflow:hidden; margin-bottom:2em;}
+.graphResult{float:left;}
+.graphInfo{float:left; margin:0.5em;}
+.graphLegend{margin-bottom:0.5em; }
+.graphVignette{}
