--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -65,3 +65,12 @@ table#visites tr.c_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];c
 .graphInfo{float:left; margin:0.5em;}
 .graphLegend{margin-bottom:0.5em; }
 .graphVignette{}
+
+.graphLegend .legendColorBox div{width:14px; height:10px;}
+.graphLegend .legendColorBox.cacher div div{position:absolute; left:-3000em;}
+
+/* particularites stats SPIP */
+.statistiques_visites .graphResult{float:none;}
+.statistiques_visites .graphInfo{float:none;}
+.statistiques_visites .graphLegend table{width:100%; padding:0 1em 1em 1em;}
+.statistiques_visites .graphLegend tr{display:inline;}
