- Un chouilla plus simple !

--- a/prive/style_prive_plugin_stats.html
+++ b/prive/style_prive_plugin_stats.html
@@ -67,7 +67,7 @@ table#visites tr.c_recap th {background-color:#[(#GET{foncee}|couleur_foncer)];c
 .graphVignette{}
 
 .graphLegend .legendColorBox div{width:14px; height:10px;}
-.graphLegend .legendColorBox.cacher div div{position:absolute; left:-3000em;}
+.graphLegend .cacher .legendColorBox div div{position:absolute; left:-3000em;}
 
 /* particularites stats SPIP */
 .statistiques_visites .graphResult{float:none;}
