- Montrer les mois et les années dans les graphiques

--- a/prive/stats/visites.html
+++ b/prive/stats/visites.html
@@ -64,6 +64,7 @@
 
 		$("#visites_mensuelles").tFlot(
 			$.extend(true, {}, params, {
+				grille:{years:true},
 				flot:{
 					xaxis:{
 						timeformat:"%b %y"
